修正影片尚未播放就關閉該畫面造成動畫尚在背景播放的問題

--- a/AnimationPlayer/UserControls/AnimationViewUserControl.xaml
+++ b/AnimationPlayer/UserControls/AnimationViewUserControl.xaml
@@ -99,7 +99,7 @@
                 </Grid>
             </ListBoxItem>
         </ListBox>-->
-        <ListBox Grid.Row="2" x:Name="IC_VodList" Foreground="{DynamicResource AccentColorBrush4}" Margin="10, 20">
+        <ListBox Grid.Row="2" x:Name="IC_VodList" Foreground="{DynamicResource AccentColorBrush4}" Margin="10, 20, 0, 20">
             <ListBox.Resources>
                 <Style TargetType="ScrollBar" BasedOn="{StaticResource MaterialDesignScrollBarMinimal_Obvious_Vertical}" />
             </ListBox.Resources>
