優化AnimationPreview的設計界面顯示結果 =>僅方便開發者開發, 使用者無影響

--- a/AnimationPlayer/MainWindow.xaml
+++ b/AnimationPlayer/MainWindow.xaml
@@ -81,7 +81,7 @@
             <metro:Flyout x:Name="Flyout_Video" Position="Bottom"
                           CloseButtonVisibility="Collapsed" TitleVisibility="Collapsed" 
                           Background="#FF1D1D1D" IsOpen="False"
-                          Height="{cal:Binding ActualHeight-30, ElementName=metroWindow}">
+                          Height="{cal:Binding (ActualHeight-30), ElementName=metroWindow}">
                 <!--<UserControls:VideoPlayerUserControl />-->
             </metro:Flyout>
 
