--- a/AnimationPlayer/UserControls/AnimationPreviewUserControl.xaml
+++ b/AnimationPlayer/UserControls/AnimationPreviewUserControl.xaml
@@ -47,6 +47,12 @@
                         HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="Btn_Watch_Click">
                     <materialDesign:PackIcon Kind="Play" />
                 </Button>
+                <Button x:Name="Btn_Remove" Width="50" Height="50" Padding="0"
+                        Style="{StaticResource MaterialDesignFlatButton_HoverBgLight}" materialDesign:ButtonAssist.CornerRadius="0"
+                        Foreground="{DynamicResource AccentColorBrush2}" Visibility="Collapsed"
+                        HorizontalAlignment="Right" VerticalAlignment="Top" Background="#19FFFFFF">
+                    <materialDesign:PackIcon Kind="TrashCan" Width="30" Height="30" />
+                </Button>
             </Grid>
         </materialDesign:Card>
     </Grid>
