--- a/AnimationPlayer/UserControls/AnimationPreviewUserControl.xaml
+++ b/AnimationPlayer/UserControls/AnimationPreviewUserControl.xaml
@@ -9,7 +9,7 @@
              xmlns:converter="clr-namespace:AnimationPlayer.Reflections"
              xmlns:cal="clr-namespace:CalcBinding;assembly=CalcBinding"
              mc:Ignorable="d" 
-             d:DesignHeight="250" d:DesignWidth="179">
+             d:DesignHeight="350" d:DesignWidth="250">
 
     <!--<UserControl.DataContext>
         <local:AnimationObject />
@@ -53,6 +53,16 @@
                         HorizontalAlignment="Right" VerticalAlignment="Top" Background="#19FFFFFF">
                     <materialDesign:PackIcon Kind="TrashCan" Width="30" Height="30" />
                 </Button>
+                <ToggleButton x:Name="Btn_Favorite" Width="50" Height="50" 
+                              Style="{StaticResource MaterialDesignActionToggleButton}"
+                              HorizontalAlignment="Left" VerticalAlignment="Top" Background="Transparent" Click="Btn_Favorite_Click">
+                    <ToggleButton.Content>
+                        <materialDesign:PackIcon Kind="StarOutline" Width="30" Height="30" Foreground="{DynamicResource AccentColorBrush2}" />
+                    </ToggleButton.Content>
+                    <materialDesign:ToggleButtonAssist.OnContent>
+                        <materialDesign:PackIcon Kind="Star" Width="30" Height="30" Foreground="#B2FFFF00" />
+                    </materialDesign:ToggleButtonAssist.OnContent>
+                </ToggleButton>
             </Grid>
         </materialDesign:Card>
     </Grid>
