修正短時間內開啟動畫=>關閉動畫=>開啟動畫 贈成的例外狀況 實作我的最愛的介面顯示

--- a/AnimationPlayer/UserControls/AnimationPreviewUserControl.xaml
+++ b/AnimationPlayer/UserControls/AnimationPreviewUserControl.xaml
@@ -53,7 +53,7 @@
                         HorizontalAlignment="Right" VerticalAlignment="Top" Background="#19FFFFFF">
                     <materialDesign:PackIcon Kind="TrashCan" Width="30" Height="30" />
                 </Button>
-                <ToggleButton x:Name="Btn_Favorite" Width="50" Height="50" 
+                <ToggleButton x:Name="Btn_Favorite" Width="50" Height="50" IsChecked="{Binding IsFavaorite}"
                               Style="{StaticResource MaterialDesignActionToggleButton}"
                               HorizontalAlignment="Left" VerticalAlignment="Top" Background="Transparent" Click="Btn_Favorite_Click">
                     <ToggleButton.Content>
