--- a/AnimationPlayer/MainWindow.xaml
+++ b/AnimationPlayer/MainWindow.xaml
@@ -59,8 +59,7 @@
     <!-- #region 視窗右上方按鈕 -->
     <metro:MetroWindow.RightWindowCommands>
         <metro:WindowCommands>
-            <!--<Button Content="{materialDesign:PackIcon Kind=TshirtCrew}" />-->
-            <!--<ToggleButton Content="Flyout" IsChecked="{Binding ElementName=DH_Dialog, Path=IsOpen}" />-->
+            <ToggleButton Content="{materialDesign:PackIcon Kind=Settings}" IsChecked="{Binding ElementName=Flyout_Setting, Path=IsOpen}" />
         </metro:WindowCommands>
     </metro:MetroWindow.RightWindowCommands>
     <!-- #endregion -->
@@ -69,22 +68,28 @@
     <!-- #region Flyouts -->
     <metro:MetroWindow.Flyouts>
         <metro:FlyoutsControl>
-            
-            <metro:Flyout x:Name="Flyout_Animation" Position="Left" IsPinned="False"
+            <!--動畫資訊及列表-->
+            <metro:Flyout x:Name="Flyout_Animation" Position="Left" IsPinned="False" AnimateOpacity="True"
                           CloseButtonVisibility="Collapsed" TitleVisibility="Collapsed"
                           Background="#FF1D1D1D" IsOpen="False"
                           Width="400"
                           Height="{Binding ActualHeight, ElementName=metroWindow}">
                 <!--<UserControls:AnimationViewUserControl />-->
             </metro:Flyout>
-
-            <metro:Flyout x:Name="Flyout_Video" Position="Bottom"
+            <!--影片播放器-->
+            <metro:Flyout x:Name="Flyout_Video" Position="Bottom" AnimateOpacity="True"
                           CloseButtonVisibility="Collapsed" TitleVisibility="Collapsed" 
                           Background="#FF1D1D1D" IsOpen="False"
                           Height="{cal:Binding (ActualHeight-30), ElementName=metroWindow}">
                 <!--<UserControls:VideoPlayerUserControl />-->
             </metro:Flyout>
-
+            <!--設定-->
+            <metro:Flyout x:Name="Flyout_Setting" Position="Top" AnimateOpacity="True"
+                          CloseButtonVisibility="Collapsed" TitleVisibility="Collapsed" 
+                          Background="{x:Null}" IsOpen="True" Margin="0 40 0 0"
+                          Width="400" Height="500">
+                <UserControls:SettingUserControl />
+            </metro:Flyout>
         </metro:FlyoutsControl>
     </metro:MetroWindow.Flyouts>
     <!-- #endregion -->
