--- a/AnimationPlayer/UserControls/SettingUserControl.xaml
+++ b/AnimationPlayer/UserControls/SettingUserControl.xaml
@@ -7,13 +7,13 @@
              xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              xmlns:metro="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:properties="clr-namespace:AnimationPlayer.Properties"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Width="400" Height="500"
              d:DesignHeight="500" d:DesignWidth="400">
 
     <Grid Background="#F2292929">
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
-            <RowDefinition />
+            <RowDefinition Height="*" />
             <RowDefinition Height="55" />
         </Grid.RowDefinitions>
 
@@ -21,37 +21,53 @@
             <TextBlock Text="設定" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Foreground="{DynamicResource AccentColorBrush4}" />
         </materialDesign:Card>
 
-        <Grid Grid.Row="1" Margin="20">
-            <ScrollViewer VerticalScrollBarVisibility="Auto" Foreground="{DynamicResource AccentColorBrush4}">
-                <ScrollViewer.Resources>
-                    <Style TargetType="ScrollBar" BasedOn="{StaticResource MaterialDesignScrollBarMinimal_Obvious_Vertical}" />
-                </ScrollViewer.Resources>
-                <StackPanel>
-                    <TextBlock Text="播放器" Margin="10" FontSize="16" />
-                    <Grid Margin="10, 5">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="執行序數量" ToolTip="數量越多影片緩衝發生機率越低" FontSize="14" VerticalAlignment="Center" />
-                        <metro:NumericUpDown x:Name="NUD_Thread" Grid.Column="1" Minimum="1" Maximum="10" Interval="1" InterceptManualEnter="False"
-                                             Value="{Binding StreamLink_hls_segment_threads, Source={x:Static properties:Settings.Default}}" FontSize="14" HorizontalContentAlignment="Center" Focusable="False" NumericInputMode="Numbers" />
-                    </Grid>
-                    <Grid Margin="10, 5">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="影片畫質" ToolTip="Best: 最高畫質; Worst: 最低畫質" FontSize="14" VerticalAlignment="Center" />
-                        <ComboBox x:Name="CB_Quality" Grid.Column="1" Style="{StaticResource MetroComboBox}" FontSize="14" HorizontalContentAlignment="Center">
-                            <ComboBoxItem Content="worst" />
-                            <ComboBoxItem Content="best" IsSelected="True" />
-                        </ComboBox>
-                    </Grid>
-                    <!--<Separator Style="{StaticResource MaterialDesignLightSeparator}" />-->
-                </StackPanel>
-            </ScrollViewer>
-        </Grid>
+        <ScrollViewer Grid.Row="1" Margin="20" VerticalScrollBarVisibility="Auto" Foreground="{DynamicResource AccentColorBrush4}">
+            <ScrollViewer.Resources>
+                <Style TargetType="ScrollBar" BasedOn="{StaticResource MaterialDesignScrollBarMinimal_Obvious_Vertical}" />
+            </ScrollViewer.Resources>
+            <StackPanel>
+                <TextBlock Text="播放器" Margin="10" FontSize="16" />
+                <Grid Margin="10, 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="執行序數量" ToolTip="數量越多影片緩衝發生機率越低" FontSize="14" VerticalAlignment="Center" />
+                    <metro:NumericUpDown x:Name="NUD_Thread" Grid.Column="1" Minimum="1" Maximum="10" Interval="1" InterceptManualEnter="False"
+                                            Value="{Binding StreamLink_hls_segment_threads, Source={x:Static properties:Settings.Default}}" FontSize="14" HorizontalContentAlignment="Center" Focusable="False" NumericInputMode="Numbers" />
+                </Grid>
+                <Grid Margin="10, 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="影片畫質" ToolTip="Best: 最高畫質; Worst: 最低畫質" FontSize="14" VerticalAlignment="Center" />
+                    <ComboBox x:Name="CB_Quality" Grid.Column="1" Style="{StaticResource MetroComboBox}" FontSize="14" HorizontalContentAlignment="Center">
+                        <ComboBoxItem Content="best" />
+                        <ComboBoxItem Content="worst" />
+                    </ComboBox>
+                </Grid>
+                <Grid Margin="10, 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="影片檔案快取" ToolTip="建議值1000~10000" FontSize="14" VerticalAlignment="Center" />
+                    <metro:NumericUpDown x:Name="NUD_FileCache" Grid.Column="1" Minimum="1000" Maximum="10000" Interval="1000" InterceptManualEnter="False"
+                                            Value="{Binding Vlc_file_caching, Source={x:Static properties:Settings.Default}}" FontSize="14" HorizontalContentAlignment="Center" Focusable="False" NumericInputMode="Numbers" />
+                </Grid>
+                <Grid Margin="10, 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="影片串流快取" ToolTip="建議值1000~10000" FontSize="14" VerticalAlignment="Center" />
+                    <metro:NumericUpDown x:Name="NUD_NetworkCache" Grid.Column="1" Minimum="1000" Maximum="10000" Interval="1000" InterceptManualEnter="False"
+                                            Value="{Binding Vlc_network_caching, Source={x:Static properties:Settings.Default}}" FontSize="14" HorizontalContentAlignment="Center" Focusable="False" NumericInputMode="Numbers" />
+                </Grid>
+                <!--<Separator Style="{StaticResource MaterialDesignLightSeparator}" />-->
+            </StackPanel>
+        </ScrollViewer>
 
         <Grid Grid.Row="2" Margin="0 10">
             <Grid.ColumnDefinitions>
@@ -61,13 +77,13 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button x:Name="Btn_Save" Grid.Column="1" Style="{StaticResource MaterialDesignFlatButton}" Foreground="#CC00FF00" Background="#FF1D1D1D">
+            <Button x:Name="Btn_Save" Grid.Column="1" Style="{StaticResource MaterialDesignFlatButton}" Foreground="#CC00FF00" Background="#FF1D1D1D" Click="Btn_Save_Click">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Check" Height="20" Width="20" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     <TextBlock Text="儲存   " FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
-            <Button x:Name="Btn_Cancel" Grid.Column="3" Style="{StaticResource MaterialDesignFlatButton}" Foreground="#CCFF0000" Background="#FF1D1D1D">
+            <Button x:Name="Btn_Cancel" Grid.Column="3" Style="{StaticResource MaterialDesignFlatButton}" Foreground="#CCFF0000" Background="#FF1D1D1D" Click="Btn_Cancel_Click">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Multiply" Height="20" Width="20" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     <TextBlock Text="取消   " FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" />
