--- a/AnimationPlayer/MainWindow.xaml
+++ b/AnimationPlayer/MainWindow.xaml
@@ -86,7 +86,7 @@
             <!--設定-->
             <metro:Flyout x:Name="Flyout_Setting" Position="Top" AnimateOpacity="True"
                           CloseButtonVisibility="Collapsed" TitleVisibility="Collapsed" 
-                          Background="{x:Null}" IsOpen="True" Margin="0 30 0 60"
+                          Background="{x:Null}" IsOpen="False" Margin="0 30 0 60"
                           Height="{cal:Binding (ActualHeight-30), ElementName=metroWindow}">
                 <UserControls:SettingUserControl />
             </metro:Flyout>
